--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -1,37 +1,68 @@
 <div class="fixed-top">
 <nav class="navbar-customized navbar-expand-lg navbar-light fixed-top-second-row" style="height: 5%;background-color: white;">
-    <!-- <div class="right_bar">
+    <div class="right_bar">
         <div class="navbar-address1">
-            <ul class="list-inline">
-                <li class="pl-3" id="memberLinkPanRegister">
-                    <i class="fas fa-map-marker-alt" style="font-size:24px;color: rgb(228, 120, 31)"></i>
+            <ul class="list-inline pt-2">
+                <li class="pl-3 pt-3" id="memberLinkPanRegister">
+                    <a href="/"><img class="smartphone" src="../../assets/images/navbar_and_banner_section/smartphone1.png"></a>
                 </li>
-                <li class="pb-3" id="memberLinkPanRegister">
-                    <span>No 571, Highlevel Road, Delkanda, Nugegoda</span>
+                <li id="memberLinkPanRegister">
+                    <span>+ 94 77 123 4567</span>
                 </li>
-                <li><span>|</span></li>
-                <li>
-                    <a class="nav-link" data-aos="fade-left" data-aos-duration="900" href="/cart">
-                        <i class="fa" style="font-size:24px;color: white">&#xf07a;</i>
-                        <span class="cart-span"> {{selectedProducts}} </span>
-                    </a>
-			    </li>
+                <li style="font-size:16px;"><span>|</span></li>
+                <li class="pl-3 pt-3" id="memberLinkPanRegister">
+                    <a href="/"><img class="email" src="../../assets/images/navbar_and_banner_section/1email.png"></a>
+                </li>
+                <li id="memberLinkPanRegister">
+                    <span>data.landmarkseeds@gmail.com</span>
+                </li>
+                <li style="font-size:16px;"><span>|</span></li>
+                <li class="pl-3 pt-3 float-right" id="memberLinkPanRegister">
+                    <a href="/"><img class="socialmedia2" src="../../assets/images/navbar_and_banner_section/twitter1.png"></a>
+                </li>
+                <li class="pl-3 pt-3 float-right" id="memberLinkPanRegister">
+                    <a href="/"><img class="socialmedia2" src="../../assets/images/navbar_and_banner_section/instagram1.png"></a>
+                </li>
+                <li class="pl-3 pt-3 float-right" id="memberLinkPanRegister">
+                    <a href="/"><img class="socialmedia1" src="../../assets/images/navbar_and_banner_section/facebook1.png"></a>
+                </li>
             </ul>
         </div>
-    </div> -->
+    </div>
     <div class="box justify-content-center">Welcome to Sri Lanka's biggest Online agriculture experience </div>
-
 </nav>
 <nav class="navbar-customized navbar-expand-lg navbar-light fixed-top-second-row" style="height: 60px;background-color: rgba(34,54,97,1);">
-    <div class="right_bar">
-        <div class="navbar-address2">
+    <div class="float-left left-bar">
+        <div>
             <ul class="list-inline">
-                <!-- <li id="memberLinkPanRegister">
-                    <form class="search" style="max-width:300px">
+                <li class="pl-3 float-left" id="memberLinkPanRegister">
+                    <a href="/"><img src="../../assets/images/agrolinklogo.png" class="logo"></a>
+                </li>
+            </ul>
+        </div> 
+    </div>
+    <!-- <div class="float-left left-bar">
+        <div>
+            <ul class="list-inline">
+                <li id="memberLinkPanRegister">
+                    <form class="search" style="max-width:800px">
                     <input type="text" placeholder="Search.." name="search2">
                     <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
+                </li>
+            </ul>
+        </div> 
+    </div> -->
+    <div class="right_bar">
+        <div class="navbar-address2">
+            <ul class="list-inline navbar_address-tab">
+                <!-- <li id="memberLinkPanRegister" style="padding-right: 300px;">
+                    <form class="search" style="max-width:800px">
+                    <input type="text" placeholder="Search In AgroLinks" name="search2">
+                    <button type="submit" class="search-button"><i class="fa fa-search"></i></button>
+                    </form>
                 </li> -->
+                <!-- <li style="font-size:32px;"><span>|</span></li> -->
                 <li class="pl-3" id="memberLinkPanRegister">
                     <a href="/"><img class="pin" src="../../assets/images/navbar_and_banner_section/pin.png"></a>
                 </li>
