--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -142,37 +142,37 @@ init();
 </section> -->
 <section id="bgimage1">
     <div class="justify-content-center background1">
-        <p class="textstylewhite">A leading total solution provider for all your agricultural needs</p>
-        <div class="row justify-content-center" style="padding-top: 10px">
-            <div class="col-2 divservices m-5">
+        <p class="textstylegery">A leading total solution provider for all your agricultural needs</p>
+        <div class="row justify-content-center mb-5" style="padding-top: 8px">
+            <div class="col-2 divservices pb-5">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
                       <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/Planting.png">
-                      <h4 class="mb-5 mt-1" style="color:black">Consultancy</h4>
+                      <h4 class="mb-5 mt-1 services-text" style="color:black">Consultancy</h4>
                   </li>
                 </ul>
             </div>
-            <div class="col-2 divservices m-5">
+            <div class="col-2 divservices pb-5">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
                       <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/irrigation.png">
-                      <h4 class="mb-5 mt-1" style="color:black">Irrigation</h4>
+                      <h4 class="mb-5 mt-1 services-text" style="color:black">Irrigation</h4>
                   </li>
                 </ul>
             </div>
-            <div class="col-2 divservices m-5">
+            <div class="col-2 divservices pb-5">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
                       <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/Fertilizer.png">
-                      <h4 class="mb-5 mt-1" style="color:black">Fertilizer</h4>
+                      <h4 class="mb-5 mt-1 services-text" style="color:black">Fertilizer</h4>
                   </li>
                 </ul>
             </div>
-            <div class="col-2 divservices m-5">
+            <div class="col-2 divservices pb-5">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
                       <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/plant-pot.png">
-                      <h4 class="mb-5 mt-1" style="color:black">Growing Pots</h4>
+                      <h4 class="mb-5 mt-1 services-text" style="color:black">Growing Pots</h4>
                   </li>
                 </ul>
             </div>
@@ -180,7 +180,7 @@ init();
     </div>
 </section>
 
-<section id="bestsellers">
+<section id="bestsellers" class="mt-5">
     <div class="col-1 divnewcard">
         <h3>Best</h3>
     </div>
@@ -318,15 +318,15 @@ init();
     <h1 class="landing-header-text" data-aos="zoom-in" data-aos-duration="2000">Featured Brands</h1>
     <hr data-aos="zoom-in" data-aos-duration="2000">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <img class="d-block w-100 mr-5 left-align" height="400px" [src]="featuredbrand1">
+        <div class="col-6">
+            <img class="d-block w-100 mr-5 left-align featuredbrand1" [src]="featuredbrand1">
         </div>
-        <div class="col-md-5">
+        <div class="col-5">
             <div class="row justify-content-center">
-              <img class="d-block w-100 mb-2 right-align" height="190px" [src]="featuredbrand2">
+              <img class="d-block w-100 mb-2 right-align featuredbrand2" [src]="featuredbrand2">
             </div>
             <div class="row justify-content-center">
-                <img class="d-block w-100 mt-3 right-align" height="190px" [src]="featuredbrand3">
+                <img class="d-block w-100 mt-3 right-align featuredbrand2" [src]="featuredbrand3">
             </div>
         </div>
     </div> 
@@ -365,62 +365,104 @@ init();
 
 <section class="bottom-section" id="bgimage2">
     <div class="justify-content-center background2">
-        <div class="row justify-content-center" style="padding-top: 100px">
-            <div class="col-2">
+        <div class="row justify-content-center row-padding">
+            <div class="col-2 m-3 mb-1">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon4" src="../../assets/images/bottom_company_achievements/new-product.png">
-                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                      <img class="service-icon8" src="../../assets/images/bottom_company_achievements/new-product.png">
+                      <h1 class="mt-3 mb-4 h1-counts" style="color: #f89602;font-weight: bold">
                         <span class="stat-count" data-count="500">0</span> +
                       </h1>
-                      <h3 style="color: white">Quality</h3>
-                      <h3 style="color: white">Products</h3>
+                      <h3 class="h3-counts">Quality</h3>
+                      <h3 class="h3-counts">Products</h3>
                   </li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-2 m-3 mb-1">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon4" src="../../assets/images/bottom_company_achievements/agriculture.png">
-                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                      <img class="service-icon8" src="../../assets/images/bottom_company_achievements/agriculture.png">
+                      <h1 class="mt-3 mb-4 h1-counts" style="color: #f89602;font-weight: bold">
                         <span class="stat-count" data-count="80">0</span>
                       </h1>
-                      <h3 style="color: white">Agricultural</h3>
-                      <h3 style="color: white">Products</h3>
+                      <h3 class="h3-counts">Agricultural</h3>
+                      <h3 class="h3-counts">Products</h3>
                   </li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-2 m-3 mb-1">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon3" src="../../assets/images/bottom_company_achievements/person.png">
-                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                      <img class="service-icon7" src="../../assets/images/bottom_company_achievements/person.png">
+                      <h1 class="mt-3 mb-4 h1-counts" style="color: #f89602;font-weight: bold">
                         <span class="stat-count" data-count="100">0</span>
                       </h1>
-                      <h3 style="color: white">Quality</h3>
-                      <h3 style="color: white">Products</h3>
+                      <h3 class="h3-counts">Quality</h3>
+                      <h3 class="h3-counts">Products</h3>
                   </li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-2 m-3 mb-1">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon3" src="../../assets/images/bottom_company_achievements/brand_champion.png">
-                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                      <img class="service-icon7" src="../../assets/images/bottom_company_achievements/brand_champion.png">
+                      <h1 class="mt-3 mb-4 h1-counts" style="color: #f89602;font-weight: bold">
                         <span class="stat-count" data-count="800">0</span>
                       </h1>
-                      <h3 style="color: white">Quality</h3>
-                      <h3 style="color: white">Products</h3>
+                      <h3 class="h3-counts">Quality</h3>
+                      <h3 class="h3-counts">Products</h3>
                   </li>
                 </ul>
             </div>
         </div>
+        <div class="row justify-content-center footer-row1">
+            <div class="col-12 footer-box1 ml-5 mr-5">
+                <p class="textstylewhite">Let's Stay In Touch</p>
+                <p style="color:white;">All our latest products and news for agriculture needs delivered to your inbox a few times a month</p>
+            </div>
+        </div>
     </div>
 </section>
+<!-- <section class="bottom-section2" id="bgimage2"> -->
+
+<!-- </section> -->
 </div>
 <footer>
-    <div class="row justify-content-center mb-5">
+    <!-- <div class="row justify-content-center mb-5">
       Copyright © 2021 AgroLinks 
+    </div> -->
+    <div class="row justify-content-center footer-row2">
+        <div class="col-12 footer-box2">
+            <div class="row pt-5">
+                <div class="col-2 justify-content-center">  
+                    <a href="/"><img src="../../assets/images/agrolinklogo.png" class="logo"></a>
+                    <p class="pt-2" style="color:white;">Agrolinks Company</p>
+                    <p class="pt-5">No 571, Highlevel Road, Delkanda, Nugegoda</p>
+                </div>
+                <div class="col-2">  
+                    <p style="color:#f8c67c;">Main</p>
+                    <p class="pt-2">Home</p>
+                    <p class="">About Us</p>
+                    <p class="">Contact Us</p>
+                </div>
+                <div class="col-2">  
+                    <p style="color:#f8c67c;">More</p>
+                    <p class="pt-2">Home</p>
+                    <p class="">About Us</p>
+                    <p class="">Contact Us</p>
+                </div>
+                <div class="col-2">  
+                    <p style="color:#f8c67c;">Category</p>
+                    <p class="pt-2">Home</p>
+                    <p class="">About Us</p>
+                    <p class="">Contact Us</p>
+                </div>
+                <div class="col-2">  
+                    <p class="pt-2" style="color:#f8c67c;">Agrolinks Company</p>
+                    <p class="pt-5">No 571, Highlevel Road, Delkanda, Nugegoda</p>
+                </div>
+            </div>
+        </div>
     </div>
 </footer>
 
