--- a/Web/src/app/admin/sidebar/sidebar.component.html
+++ b/Web/src/app/admin/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar" id="sidebartoggle" [hidden]="!showSidebar">
-    <span><a href="/"><img width="170px" height="50px" src="../../assets/images/logo.png"></a></span>
+    <span><a href="/"><img width="60px" height="50px" src="../../assets/images/agrolinklogo.png"></a></span>
     <span><a class="navtext"><i class="far fa-user mr-3"></i>  Hi {{name}}!</a></span>
     <span><a class="navtext" id="user" (click)="Users()"><i class="fas fa-users-cog mr-3"></i>  User</a></span>
     <span><a class="navtext" id="category" (click)="Category()"><i class="far fa-calendar mr-3"></i> Category</a></span>
     <span><a class="navtext" id="product" (click)="Product()"><i class="fas fa-sticky-note mr-3"></i>  Product</a></span>
-    <span><a class="navtext" id="banner" (click)="Banner()"><i class="fas fa-sticky-note mr-3"></i>  Banner Images</a></span>
+    <span><a class="navtext" id="banner" (click)="Banner()"><i class="fas fa-image mr-3"></i>  Banner Images</a></span>
     <span id="footer"><a class="navtext" (click)="Logout()"><i class="fas fa-sign-out-alt mr-3"></i>  Logout</a></span>
 </div>
 <div class="fixedbreadcrumb">
