--- a/Web/src/app/cart/cart.component.html
+++ b/Web/src/app/cart/cart.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-4 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
     <div class="row justify-content-center div3">
-            <!-- <form>
+            <form>
             <div class="form-group">
                 <label for="name">Recipient's Name</label>
                 <div class="input-group">
@@ -60,10 +60,11 @@
             <div class="form-group">
                 <button type="button" class="btn btn-outline-dark" (click)="ContinueToPayment()">Continue</button>
             </div>
-            </form> -->
+            </form>
 
-  <!-- override global configuration -->
+<div>
   <direct-pay-ipg [config]="{  size: 150, type: 'round',colour: 'white'}" [PaymentRequest]="paymentRequest" (onSuccess)="onSuccess($event)" (onError)="onError($event)"></direct-pay-ipg>
+</div>
 
     </div>
     </div>
