--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -10,7 +10,7 @@
         <hr data-aos="zoom-in" data-aos-duration="2000">
         <div class="row justify-content-center">
             <div class="col-md-3 col-sm-12 divcard m-2 justify-content-center" data-aos="flip-left" data-aos-duration="2000" 
-            *ngFor="let item of productlist">
+            *ngFor="let item of productlist | paginate: { itemsPerPage: 6, currentPage: pproducts }; let i = index">
             <img class="d-block w-100 mb-5" [src]="item.Image">
             <h5 style="text-align: left;color: #c79416">Product Name</h5>
             <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
@@ -37,6 +37,7 @@
                 <h2 style="margin-top: 5%;text-align: center;word-wrap:break-word;">Currently there are no Products</h2>
             </div>
         </div>
+        <pagination-controls (pageChange)="pagination($event)" class="float-right"></pagination-controls>
     </div>
 </section>
 </div>
