--- a/Web/src/app/admin/category/category.component.html
+++ b/Web/src/app/admin/category/category.component.html
@@ -16,7 +16,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of categorylist | paginate: { itemsPerPage: 5, currentPage: pcategories }; let i = index">
+        <tr *ngFor="let item of categorylist | paginate: { itemsPerPage: 4, currentPage: pcategories }; let i = index">
           <td style="width:100px;height:100px"><img [src]="item.Icon" style="width:inherit; height: inherit;align-content: center;"></td>
           <td>{{item.Title}}</td>
           <td>{{item.DatePublished | date:'yyyy-MM-dd'}}</td>
@@ -26,7 +26,7 @@
         </tr>
         </tbody>
       </table>
-      <pagination-controls (pageChange)="pcategories = $event" class="float-right"></pagination-controls>
+      <pagination-controls (pageChange)="pagination($event)" class="float-right"></pagination-controls>
     </div>
 </div>
 
