--- a/Web/src/app/admin/product/product.component.html
+++ b/Web/src/app/admin/product/product.component.html
@@ -16,7 +16,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of productlist | paginate: { itemsPerPage: 5, currentPage: pproducts }; let i = index">
+        <tr *ngFor="let item of productlist | paginate: { itemsPerPage: 4, currentPage: pproducts }; let i = index">
           <td style="width:100px;height:100px"><img [src]="item.Image" style="width:inherit; height: inherit;align-content: center;"></td>
           <td>{{item.Title}}</td>
           <td>{{item.DatePublished | date:'yyyy-MM-dd'}}</td>
@@ -26,7 +26,7 @@
         </tr>
       </tbody>
     </table>
-    <pagination-controls (pageChange)="pproducts = $event" class="float-right"></pagination-controls>
+    <pagination-controls (pageChange)="pagination($event)" class="float-right"></pagination-controls>
     </div>
 </div>
 
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="datepublished">Date</label>
+        <label for="datepublished| date:'yyyy-MM-dd'">Date</label>
         <div class="input-group">
           <input type="text" id="datepublished" class="form-control" style="text-align: left" placeholder="datepublished" name="datepublished"
           [(ngModel)]="datepublished" disabled>
@@ -66,7 +66,7 @@
         <label for="price">Price</label>
         <div class="input-group">
           <input type="text" id="price" class="form-control" style="text-align: left" placeholder="price" name="price" 
-          [(ngModel)]="price">
+          [(ngModel)]="price" (keyup)="validateNumbers()">
         </div>
       </div>
       <div class="form-group">
