--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -1576,18 +1576,39 @@ pre {
 	  box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
 	}
 	.col-1 {
-	  flex-basis: 10%;
+	  flex-basis: 25%;
 	}
 	.col-2 {
-	  flex-basis: 40%;
+	  flex-basis: 50%;
 	}
 	.col-3 {
-	  flex-basis: 25%;
+	  flex-basis: 8%;
 	}
 	.col-4 {
-	  flex-basis: 25%;
+	  flex-basis: 12%;
+	}
+	.col-5 {
+		flex-basis: 5%;
 	}
 	
+	@media screen and (max-width: 600px) {
+		.col-1 {
+		flex-basis: 25%;
+		}
+		.col-2 {
+		flex-basis: 50%;
+		}
+		.col-3 {
+		flex-basis: 10%;
+		}
+		.col-4 {
+		flex-basis: 10%;
+		}
+		.col-5 {
+			flex-basis: 5%;
+		}
+	}
+
 	@media all and (max-width: 767px) {
 	  .table-header {
 		display: none;
